fix: increase navbar's z-index

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   left: 0;
   right: 0;
   height: 70px;
+  z-index: 10;
 }
 
 .marginBox {
